Added changed_when checks

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,12 +12,16 @@
   win_shell: "choco source disable -n {{ item.name }}"
   with_items: "{{ chocolatey_source }}"
   when: item.name is defined and item.state == 'absent'
+  register: chocolatey_source_absent
   tags:
     - configuration
+  changed_when: "'Nothing to change. Config already set' not in chocolatey_source_absent.stdout"
 
 - name: Chocolatey source present
   win_shell: "choco source add -n={{ item.name }} -s={{ item.source }} -u={{ item.user }} -p={{ item.password }} --priority={{ item.priority | default('0') }}"
   with_items: "{{ chocolatey_source }}"
   when: item.name is defined and item.state == 'present'
+  register: chocolatey_source_present
   tags:
     - configuration
+  changed_when: "'Nothing to change. Config already set' not in chocolatey_source_present.stdout"
